--- a/team1-visualization/index.html
+++ b/team1-visualization/index.html
@@ -9,6 +9,9 @@
 <body>
 <!-- partial:index.partial.html -->
 <body>
+    <br>
+    <h2>Figure 4. Alignment between Jobs and DECED Briefs and Private Sector Strategies</h2>
+    <h4>Created by Ken on August 29, 2021</h4>
 <section id="graph">
 <div class="wrapper">
    <section class="topGraph">
@@ -17,25 +20,7 @@
     <!--Graph Loads Here-->
   	</div><!--end line1-->
   </section>
-   <ul class="transportStats">
-    <li data="car">
-        <h3>25,785,000</h3>
-        <p>Total by Car</p>
-    </li>
-    <li data="plane">
-        <h3>6,150,000</h3>
-        <p>Total by Plane</p>
-    </li>
-    <li data="train">
-        <h3>4,932,000</h3>
-        <p>Total by Train</p>
-    </li>
-    <li data="bus">
-        <h3>1,856,000</h3>
-        <p>Total by Coach</p>
-    </li>
-  </ul><!--end transport stats-->
-  </div>
+</div>
 </section><!--end graph + transport numbers-->
 </body>
 <!-- partial -->
